# untitled-ai-game

./: .gitignore  CMakeLists.txt  run.sh
assets/Prompts/: baka-high.txt  baka-low.txt  baka-neutral.txt  baka-none.txt  confesion.txt  day2.txt  day3.txt  day4.txt  fake.txt  initial.txt  roll-hig-2.txt  roll-hig-3.txt  roll-hig-4.txt  roll-low-2.txt  roll-low-3.txt  roll-low-4.txt  roll-mid-2.txt  roll-mid-3.txt  roll-mid-4.txt  short.txt
include/: constants.h
src/: main.cpp
src/ECS/: Components.h  Entity.h  System.h
src/Game/: Game.cpp  Game.h
src/Game/Graphics/: Texture.cpp  Texture.h  TextureManager.cpp  TextureManager.h  Tile.h
src/PocketAi/: Components.h  PocketAi.cpp  PocketAi.h  Systems.cpp  Systems.h  TextProcessingQueue.h
src/PocketAi/Ai/: AiManager.cpp  AiManager.h  Baka.cpp  Baka.h  Base.h  Llama.cpp  Llama.h
src/PocketAi/Audio/: AudioManager.cpp  AudioManager.h
src/PocketAi/Systems/: AiSystems.cpp  AiSystems.h  GeneralSystems.cpp  GeneralSystems.h  SpriteSystems.cpp  SpriteSystems.h  Systems.h  TextSystems.cpp  TextSystems.h
src/Scene/: Scene.cpp  Scene.h
